--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                 <div class="masthead-heading text-uppercase">DPDT Relay</div>
             </div>
         </header>
-        <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="principal">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">¿Qué son los relés?</h2>
@@ -34,36 +33,42 @@
                     <img src="./imagenes/RELEDPDT.png">
                 </div>
                 <div class="text-center">
+                    <br><br><br>
                     <h2 class="section-heading text-uppercase">Relé: 1A DPDT</h2>
                     <h3 class="section-subheading text-muted">Uso: Este es un pequeño relé de señal DPDT útil para aplicaciones de conmutación de telecomunicaciones. La calificación de la garantía es de 1 amperio a 12 V CC.</h3>
                     <img src="./imagenes/RELE1ADPDT.png">
                 </div>
                 <div class="text-center">
+                    <br><br><br>
                     <h2 class="section-heading text-uppercase">Relé: 3A DPDT</h2>
                     <h3 class="section-subheading text-muted">Uso: Este es un relé de señal útil para telecomunicaciones, audio y otras aplicaciones de señales de baja potencia. La calificación de la garantía es de 3 amperios a 24 VCC.</h3>
                     <img src="./imagenes/RELE3ADPDT.png">
                 </div>
                 <div class="text-center">
+                    <br><br><br>
                     <h2 class="section-heading text-uppercase">Relé: 5A DPDT</h2>
                     <h3 class="section-subheading text-muted">Uso: Este es un relé de señal útil para telecomunicaciones, audio de alta potencia y otras aplicaciones de conmutación de señales de alta potencia. La calificación de la garantía es de 5 amperios a 24 VCC.</h3>
                     <img src="./imagenes/RELE5ADPDT.png">
                 </div>
+                <div class="text-center">
+                    <br><br><br>
+                    <h2 class="section-heading text-uppercase">Ejemplo usando el Relé: KS2E-M-DC5</h2>
+                    <h3 class="section-subheading text-muted">Se realizó un ejemplo en el simulador de circuitos eléctricos "Wokwi". <br><br>Los materiales que se necesitaron fueron los siguientes: <br>Raspberry Pi Pico <br>2 LED's <br>2 Resistencias de 220 OHMs <br> Relé: KS2E-M-DC5 <br>Cables</h3>
+                    <h3 class="section-subheading text-muted">El circuito consiste en utilizar el relé para controlar los 2 LEDs con un código sencillo hecho en Python.</h3>
+                    <p><a href="https://wokwi.com/projects/359758482888215553">Haz click aquí</a> para ir al ejemplo en Wokwi</p>
+                </div>
+            </div>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Carrillo Reyes Rogelio 19211608</div>
+                    <div class="col-lg-4 text-lg-start">Carrillo Reyes Rogelio <b>19211608</b></div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://github.com/RogelioCR311" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
         </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
