--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
                 </div>
                 <div class="text-center">
                     <br><br><br>
+                    <h2 class="section-heading text-uppercase">Características de los Relés DPDT</h2>
+                    <h3 class="section-subheading text-muted">Los interruptores DPDT suelen utilizar la inversión de polaridad. Es por eso que algunas variantes del interruptor DPDT, tales como los conmutadores de cruce, son cableado internamente para tal fin. Los interruptores de cruce sólo tienen cuatro terminales o conexiones, en lugar de seis que puedes ver en DPDT. Hay dos conexiones utilizadas para las salidas y las otras dos para las entradas. El interruptor selecciona una u otra polaridad normal o invertida cuando se conecta a cualquier fuente de DC, tales como la batería. <br>Un relé DPDT tiene una sola bobina con dos brazos que se mueven al mismo tiempo. En el interior del relé DPDT, hay dos dispositivos de conmutación SPDT independientes (polo doble tiro simple). Estos se utilizan para aplicaciones de señales de conmutación con más frecuencia de lo que no, pero también se pueden encontrar en aplicaciones de alta potencia de conmutación.</h3>
+                </div>
+                <div class="text-center">
+                    <h2class="section-heading text-uppercase">Tipos de Relés DPDT</h2>
+                </div>
+                <div class="text-center">
+                    <br><br><br>
                     <h2 class="section-heading text-uppercase">Relé: 1A DPDT</h2>
                     <h3 class="section-subheading text-muted">Uso: Este es un pequeño relé de señal DPDT útil para aplicaciones de conmutación de telecomunicaciones. La calificación de la garantía es de 1 amperio a 12 V CC.</h3>
                     <img src="./imagenes/RELE1ADPDT.png">
